--- a/04 - Mongoose/nodejs/apps/views/site/category.ejs
+++ b/04 - Mongoose/nodejs/apps/views/site/category.ejs
@@ -1,57 +1,15 @@
 <% include layout/header %>               
                 <!--	List Product	-->
                 <div class="products">
-                    <h3>iPhone (hiện có 186 sản phẩm)</h3>
+                    <h3><%=data.categoryName[0].cat_name%> (hiện có <%=data.total%> sản phẩm)</h3>
                     <div class="product-list card-deck">
+                        <%for(key in data.productList){%>
                         <div class="product-item card text-center">
-                            <a href="#"><img src="images/product-1.png"></a>
-                            <h4><a href="#">iPhone Xs Max 2 Sim - 256GB</a></h4>
-                            <p>Giá Bán: <span>32.990.000đ</span></p>
+                            <a href="#"><img src="/static/images/products/<%=data.productList[key].prd_image%>"></a>
+                            <h4><a href="#"><%=data.productList[key].prd_name%></a></h4>
+                            <p>Giá Bán: <span><%=data.productList[key].prd_price%></span></p>
                         </div>
-                        <div class="product-item card text-center">
-                            <a href="#"><img src="images/product-2.png"></a>
-                            <h4><a href="#">iPhone Xs Max 2 Sim - 256GB</a></h4>
-                            <p>Giá Bán: <span>32.990.000đ</span></p>
-                        </div>
-                        <div class="product-item card text-center">
-                            <a href="#"><img src="images/product-3.png"></a>
-                            <h4><a href="#">iPhone Xs Max 2 Sim - 256GB</a></h4>
-                            <p>Giá Bán: <span>32.990.000đ</span></p>
-                        </div>
-                    </div>
-                    <div class="product-list card-deck">
-                        <div class="product-item card text-center">
-                            <a href="#"><img src="images/product-4.png"></a>
-                            <h4><a href="#">iPhone Xs Max 2 Sim - 256GB</a></h4>
-                            <p>Giá Bán: <span>32.990.000đ</span></p>
-                        </div>
-                        <div class="product-item card text-center">
-                            <a href="#"><img src="images/product-5.png"></a>
-                            <h4><a href="#">iPhone Xs Max 2 Sim - 256GB</a></h4>
-                            <p>Giá Bán: <span>32.990.000đ</span></p>
-                        </div>
-                        <div class="product-item card text-center">
-                            <a href="#"><img src="images/product-6.png"></a>
-                            <h4><a href="#">iPhone Xs Max 2 Sim - 256GB</a></h4>
-                            <p>Giá Bán: <span>32.990.000đ</span></p>
-                        </div>
-                    </div>
-                    <div class="product-list card-deck">
-                        <div class="product-item card text-center">
-                            <a href="#"><img src="images/product-7.png"></a>
-                            <h4><a href="#">iPhone Xs Max 2 Sim - 256GB</a></h4>
-                            <p>Giá Bán: <span>32.990.000đ</span></p>
-                        </div>
-                        <div class="product-item card text-center">
-                            <a href="#"><img src="images/product-8.png"></a>
-                            <h4><a href="#">iPhone Xs Max 2 Sim - 256GB</a></h4>
-                            <p>Giá Bán: <span>32.990.000đ</span></p>
-                        </div>
-                        <div class="product-item card text-center">
-                            <a href="#"><img src="images/product-9.png"></a>
-                            <h4><a href="#">iPhone Xs Max 2 Sim - 256GB</a></h4>
-                            <p>Giá Bán: <span>32.990.000đ</span></p>
-                        </div>
+                        <%}%>
                     </div>
                 </div>
                 <!--	End List Product	-->
