--- a/04 - Mongoose/nodejs/apps/views/site/layout/header.ejs
+++ b/04 - Mongoose/nodejs/apps/views/site/layout/header.ejs
@@ -48,12 +48,9 @@
             	<nav>
                 	<div id="menu" class="collapse navbar-collapse">
                         <ul>
-                            <li class="menu-item"><a href="#">iPhone</a></li>
-                            <li class="menu-item"><a href="#">Samsung</a></li>
-                            <li class="menu-item"><a href="#">HTC</a></li>
-                            <li class="menu-item"><a href="#">Nokia</a></li>
-                            <li class="menu-item"><a href="#">Sony</a></li>
-                            <li class="menu-item"><a href="#">Blackberry</a></li>
+                            <%for (key in category){%>
+                                <li class="menu-item"><a href="/category/<%=category[key].cat_name%>/<%=category[key]._id%>"><%=category[key].cat_name%></a></li>
+                            <%}%>                            
                         </ul>
                     </div>
                 </nav>
