--- a/04 - Mongoose/nodejs/apps/views/site/category.ejs
+++ b/04 - Mongoose/nodejs/apps/views/site/category.ejs
@@ -5,8 +5,8 @@
                     <div class="product-list card-deck">
                         <%for(key in data.productList){%>
                         <div class="product-item card text-center">
-                            <a href="#"><img src="/static/images/products/<%=data.productList[key].prd_image%>"></a>
-                            <h4><a href="#"><%=data.productList[key].prd_name%></a></h4>
+                            <a href="/product/<%=data.productList[key]._id%>"><img src="/static/images/products/<%=data.productList[key].prd_image%>"></a>
+                            <h4><a href="/product/<%=data.productList[key]._id%>"><%=data.productList[key].prd_name%></a></h4>
                             <p>Giá Bán: <span><%=data.productList[key].prd_price%></span></p>
                         </div>
                         <%}%>
